<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/anotherNoteNames"
        android:layout_width="254dp"
        android:layout_height="80dp"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="292dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/anotherNoteName"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tensionInfo"
        android:layout_width="302dp"
        android:layout_height="66dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/recomendation"
        android:textColor="@color/colorAccent"
        android:textColorLink="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612" />

    <TextView
        android:id="@+id/recognizedFreq"
        android:layout_width="345dp"
        android:layout_height="65dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/actualFrequency"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.749" />

    <TextView
        android:id="@+id/expectedFreq"
        android:layout_width="345dp"
        android:layout_height="65dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/expectedFrequency"
        android:textColor="@color/colorAccent"
        android:textColorLink="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.897" />

    <TextView
        android:id="@+id/findedNote"
        android:layout_width="162dp"
        android:layout_height="260dp"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="4dp"
        android:text="@string/findedNote"
        android:textColor="@color/colorAccent"
        android:textSize="250sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ukr_butt"
        android:layout_width="57dp"
        android:layout_height="40dp"
        android:layout_marginStart="261dp"
        android:layout_marginLeft="261dp"
        android:layout_marginTop="16dp"
        android:background="@color/ukrButton"
        android:text="@string/ukr_lang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/eng_butt"
        android:layout_width="56dp"
        android:layout_height="39dp"
        android:layout_marginStart="338dp"
        android:layout_marginLeft="338dp"
        android:layout_marginTop="16dp"
        android:background="@color/engButton"
        android:text="@string/eng_lang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>